# tygle

./: README.md  pyproject.toml
docs/: conf.py  index.rst  kp_google.apis.rst  kp_google.apis.sheets.rest.rst  kp_google.apis.sheets.rst  kp_google.apis.sheets.types.enums.rst  kp_google.apis.sheets.types.resources.rst  kp_google.apis.sheets.types.resources.spreadsheets.rst  kp_google.apis.sheets.types.resources.values.rst  kp_google.apis.sheets.types.responses.rst  kp_google.apis.sheets.types.responses.values.rst  kp_google.apis.sheets.types.rst  kp_google.base.rst  kp_google.client.rst  kp_google.rst  modules.rst
tests/: test_tygle.py
tygle/: client.py
tygle/base/: __init__.py  api.py  chain.py  request.py  resource.py  response.py  rest.py  rests.py
tygle/base/requests/: __init__.py  data_request.py  download_request.py  request.py  upload_request.py
